gcc/testsuite/gdc.test/compilable/test13582a.d
// REQUIRED_ARGS: -de
// EXTRA_FILES: imports/test13582.d
deprecated module test13582a;

import imports.test13582;

void main() { }
